--- a/css/styles.css
+++ b/css/styles.css
@@ -7,13 +7,36 @@
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
+@import "components/user-component.css";
+@import "components/badge.css";
+@import "components/icon-row.css";
 
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
+@import "screens/find.css";
+@import "screens/more.css";
 
 body {
   color: #2e363e;
   font-family: "Open Sans", sans-serif;
   margin-top: 25px;
+}
+.main-screen {
+  padding: 0px var(--horizontal-space);
+}
+
+.relatived {
+  position: relative;
+}
+.notification_dot {
+  font-size: 36px;
+  color: tomato;
+  position: absolute;
+  left: 32px;
+  bottom: 24px;
+}
+.nd-small {
+  left: 20px;
+  bottom: 20px;
 }
