--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -2,7 +2,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: #f9f9fa;
+  background-color: var(--blue);
   padding: 20px 50px;
   box-sizing: border-box;
   border-top: 1px solid rgba(121, 121, 121, 0.3);
@@ -12,7 +12,7 @@
   justify-content: space-between;
 }
 .nav__link {
-  color: #2e363e;
+  color: var(--clr-light);
   position: relative;
 }
 @keyframes notificationAnimation {
@@ -49,13 +49,26 @@
   opacity: 0;
   animation: appearBtnAnimation 0.3s ease-in-out forwards;
 }
+.delay nav__btn {
+  animation-delay: 2s;
+}
 
 .nav__btn:nth-child(2) {
-  animation-delay: 0.2s;
+  animation-delay: 100ms;
 }
 .nav__btn:nth-child(3) {
-  animation-delay: 0.5s;
+  animation-delay: 200ms;
 }
 .nav__btn:last-child {
-  animation-delay: 0.8s;
+  animation-delay: 300ms;
+}
+
+.delay .nav__btn:nth-child(2) {
+  animation-delay: 2100ms;
+}
+.delay .nav__btn:nth-child(3) {
+  animation-delay: 2200ms;
+}
+.delay .nav__btn:last-child {
+  animation-delay: 2300ms;
 }
