--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -1,12 +1,21 @@
 .screen-header {
+  font-family: var(--font1);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: var(--horizontal-space);
+  padding-bottom: 1rem;
   margin-bottom: 15px;
+  background-color: var(--clr-light);
+  color: var(--clr-dark);
+  border-radius: 1.8rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom: 1px solid var(--blue);
 }
 .screen-header__title {
-  font-size: 32px;
+  font-size: 28px;
+  margin-left: 0.5rem;
   font-weight: 600;
 }
 .screen-header__icons span {
