--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -2,20 +2,30 @@
 .user-component__column:first-child {
   display: flex;
   align-items: center;
+  margin: 0.3rem 0;
 }
 .user-component {
   justify-content: space-between;
+}
+.hoverscale {
+  transition: transform 100ms linear;
+}
+.hoverscale:hover {
+  transform: scale(0.975);
 }
 
 .user-component__avatar {
   width: 70px;
   height: 70px;
-  border-radius: 30px;
+  border-radius: 20%;
+  /* border: 2px solid var(--blue); */
+  box-shadow: 2px 2px 0.5rem var(--lowblue);
   margin-right: 20px;
 }
 .user-component__title {
   font-weight: 600;
   font-size: 22px;
+  font-family: var(--font1);
 }
 .user-component__title--not-bold {
   font-weight: 400;
@@ -24,9 +34,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 8px;
-  font-size: 17px;
-  color: var(--gray5);
+  margin-top: 10px;
+  font-size: 16px;
+  color: var(--clr-light);
 }
 .user-component__avatar--xl {
   width: 80px;
@@ -39,7 +49,7 @@
 }
 
 .user-component__column:last-child {
-  color: var(--gray4);
+  color: var(--clr-light);
   display: flex;
   flex-direction: column;
   align-items: flex-end;
