--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,10 +1,11 @@
 body.chat-screen {
-  background-color: #abc1d1;
-  height: 500vh;
+  background-color: #1e272e;
+  height: 200vh;
+  font-family: var(--font1);
 }
 
 .chat-screen .status-bar {
-  background-color: #abc1d1;
+  background-color: #1e272e;
   z-index: 2;
 }
 .chat-screen .alt-header {
@@ -12,7 +13,7 @@ body.chat-screen {
   position: fixed;
   width: 100%;
   box-sizing: border-box;
-  background-color: #abc1d1;
+  background-color: #1e272e;
   z-index: 1;
 }
 
@@ -55,24 +56,25 @@ body.chat-screen {
     opacity: 1;
   }
 }
-.main-chat > .message-row {
+.message-row:not(.message-row--own) {
   transform: translateX(-30px);
   opacity: 0;
   animation: fadeInLeftToRight 0.4s linear forwards;
-  animation-delay: 0.8s;
+  animation-delay: 0.5s;
 }
-.main-chat .message-row:last-child {
+.message-row--own {
   transform: translateX(30px);
   opacity: 0;
   animation: fadeInRightToLeft 0.4s linear forwards;
-  animation-delay: 0.8s;
+  animation-delay: 0.5s;
 }
 
 .chat__timestamp {
-  color: white;
-  background-color: #92a4b2;
+  /* color: white; */
+  opacity: 0.4;
+  background-color: #1e272e;
   padding: 15px;
-  font-size: 14px;
+  font-size: 12px;
   border-radius: 25px;
   margin-bottom: 25px;
 }
@@ -96,7 +98,8 @@ body.chat-screen {
   align-items: flex-end;
 }
 .message__bubble {
-  background-color: white;
+  color: #1e272e;
+  background-color: var(--clr-light);
   padding: 13px;
   font-size: 18px;
   border-radius: 15px;
@@ -115,7 +118,7 @@ body.chat-screen {
 }
 
 .message-row--own .message__bubble {
-  background-color: var(--yellow);
+  background-color: #ff793f;
   border-top-right-radius: 0px;
   border-top-left-radius: 15px;
   margin-right: 0px;
@@ -129,13 +132,17 @@ body.chat-screen {
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: white;
+  background-color: var(--clr-light);
+  color: #ff793f;
   display: flex;
   justify-content: space-between;
   padding: 5px 25px;
   box-sizing: border-box;
   align-items: center;
+  border-top-left-radius: 15%;
+  border-top-right-radius: 15%;
   transition: all 0.3s ease-in-out;
+  will-change: transform;
 }
 .reply .reply__column:first-child {
   width: 10%;
@@ -145,15 +152,25 @@ body.chat-screen {
   position: relative;
 }
 .reply input {
-  width: 95%;
-  padding: 12px;
+  position: relative;
+  left: -0.45rem;
+  width: 82%;
+  padding: 0.7rem 1.5rem;
   border: var(--main-border);
   border-radius: 20px;
   transition: all 0.3s ease-in-out;
+  background-color: var(--clr-dark);
+  color: #ff793f;
+  font-family: var(--font1);
+  font-size: 0.85rem;
 }
 
 .reply i {
   opacity: 0.5;
+}
+.reply__column:first-child > i {
+  position: relative;
+  top: -0.02rem;
 }
 
 .reply__column:last-child > i,
@@ -195,11 +212,15 @@ body.chat-screen {
 .reply:focus-within button {
   opacity: 0;
 }
+.reply:focus-within input::placeholder {
+  color: var(--clr-dark);
+}
 .reply input:focus {
-  width: 90vw;
-  transform: translateX(-12%) translateY(-80px);
+  width: 95vw;
+  transform: translateX(-10.8%) translateY(-80px);
 }
 
 .reply:focus-within {
   transform: translateY(80px);
+  background-color: var(--clr-dark);
 }
