--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
 @import "components/icon-row.css";
 @import "components/alt-screen-header.css";
 @import "components/no-mobile.css";
+@import "components/no-portrait.css";
 
 /* Screens */
 @import "screens/login.css";
@@ -21,11 +22,31 @@
 @import "screens/settings.css";
 @import "screens/chat.css";
 
-body {
-  color: #2e363e;
-  font-family: "Open Sans", sans-serif;
-  margin-top: 25px;
+* {
+  box-sizing: border-box;
 }
+body {
+  width: 100%;
+  height: 100%;
+  color: var(--clr-light);
+  background-color: var(--clr-dark);
+  font-family: var(--default-font);
+  margin-top: 25px;
+  /* stop dragging */
+  -ms-user-select: none;
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+main {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
 .main-screen {
   padding: 0px var(--horizontal-space);
 }
@@ -43,4 +64,24 @@ body {
 .nd-small {
   left: 20px;
   bottom: 20px;
+}
+
+/* color */
+
+.clr-dark {
+  color: var(--clr-dark);
+}
+.clr-light {
+  color: var(--clr-light);
+}
+.fnt-grayer {
+  opacity: 0.5;
+}
+
+/* background color */
+.b-clr-dark {
+  background-color: var(--clr-dark);
+}
+.b-clr-light {
+  background-color: var(--clr-light);
 }
