--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@
 }
 body {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   color: var(--clr-light);
   background-color: var(--clr-dark);
   font-family: var(--default-font);
