--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -1,7 +1,8 @@
 .nav {
   position: fixed;
+  left: 0;
   bottom: 0;
-  width: 100%;
+  width: 100vw;
   background-color: var(--blue);
   padding: 20px 50px;
   box-sizing: border-box;
