--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,7 +1,8 @@
 .status-bar {
   position: fixed;
   top: 0;
-  width: 100%;
+  left: 0;
+  width: 100vw;
   box-sizing: border-box;
   display: flex;
   justify-content: center;
