--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -19,6 +19,7 @@
 }
 
 .open-chat__header {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   opacity: 0.8;
@@ -30,9 +31,11 @@
 }
 
 .open-post {
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 }
 .open-post__title {
   font-weight: 600;
@@ -78,6 +81,9 @@
   object-fit: cover;
 }
 .open-post__photo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
 }
 .open-post__heart-count {
@@ -114,4 +120,10 @@
 .open-post__heart-count:hover i {
   will-change: transform;
   animation: heartBeat 1s linear infinite;
+}
+
+.open-post__column:first-child {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
 }
