--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,10 @@
   box-sizing: border-box;
 }
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100vw;
   height: 100vh;
   color: var(--clr-light);
